# openwsman

./: .cdtproject  .cvsignore  .gitignore  .project  AUTHORS  CMakeLists.txt  CONFORMANCE  ChangeLog  Doxyfile.in  Makefile.am  OpenWsmanLib.sln  OpenWsmanLib.vcproj  README  README.md  README.testing  README.windows  RPMNAME  TODO  VERSION.cmake  acinclude.m4  autoconfiscate.sh  configure.ac  configure.in  index.html  openwsman++.pc.in  openwsman-server.pc.cmake  openwsman-server.pc.in  openwsman.pc.in  openwsman.spec.in  wsman_config.h.cmake
bindings/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  client_opt.i  local-defs.h  openwsman.c  openwsman.h  openwsman.i  version.i.in  wsman-client.i  wsman-client_opt.i  wsman-epr.i  wsman-filter.i  wsman-names.i  wsman-soap.i  wsman-transport.i  wsman-types.i  wsman-xml.i
bindings/java/: CMakeLists.txt  JWsManBase.java  Makefile  Makefile.am  README  helpers.c  helpers.h  test_identify.java
bindings/java/tests/: CMakeLists.txt  Makefile.am  cim_enumerate_all.java  cim_enumerate_operating_system.java  cim_enumerate_registered_profiles.java  cim_linux_operatingsystem_exec_cmd.java  hyperv_invoke.java  identify.java  loading_jwsman.java  loading_sharedlib.java  run  smis_enumerate_storagepool.java
bindings/perl/: CMakeLists.txt  Makefile.am  helpers.h
bindings/perl/tests/: CIM_ComputerSystem_EnumInstances.pl  CIM_EnumClasses.pl  CMakeLists.txt  Linux_ComputerSystem_assoc.pl  Linux_EthernetPort_EnumInstances.pl  Linux_EthernetPort_GetClass.pl  Linux_EthernetPort_GetInstance.pl  Linux_NextHopIPRoute_CreateInstance.pl  Linux_NextHopIPRoute_DeleteInstance.pl  Makefile.am  identify.pl  loading.pl  run
bindings/python/: AllClass.py  CMakeLists.txt  Makefile.am  OWsman.py  helpers.c  helpers.h  test_client.py  test_enumerate.py  test_identify.py  test_release.py
bindings/python/pywsman/: MANIFEST  README.rst  setup.py  version.cmake  version.py.in
bindings/python/tests/: CMakeLists.txt  add_selector.py  add_selector2.py  client.py  enumerate.py  epr.py  identify.py  loading.py  release.py  run  xmlnode.py
bindings/ruby/: CMakeLists.txt  Makefile.am  README.rdoc  Rakefile  extconf.rb  helpers.c  helpers.h  openwsman.gemspec  openwsman.gemspec.in  openwsman.rb  parse_swig.rb  rdoc  rdoc1.9  rdoc1_9.rb  rdoc2.0  rdoc2.1  rdoc2_0.rb  rdoc_parser_swig.rb  version.rb.in
bindings/ruby/openwsman/: Makefile.am  openwsman.rb  version.rb.in  wsxmlnode.rb  xmldoc.rb  xmlnode.rb
etc/: .cvsignore  CMakeLists.txt  Makefile.am  openwsman.conf  openwsman_client.conf  openwsman_test.conf  owsmangencert.sh  owsmangencert.sh.cmake  owsmangencert.sh.in  redirect.conf  ssleay.cnf  test_simple_auth.passwd
etc/init/: .cvsignore  CMakeLists.txt  Makefile.am  openwsman.sh.in  openwsmand.sh.cmake  openwsmand.sh.in  wsmand.sh  wsmand.sh.in
etc/pam/: CMakeLists.txt
examples/: CMakeLists.txt  Makefile.am  serialize.c  test.xml  winrs.rb
include/: CMakeLists.txt  Makefile.am  WsmanEPR.h  WsmanFilter.h  wsman-api.h  wsman-cimindication-processor.h  wsman-cimxmllistener-path.h  wsman-client-api.h  wsman-client-transport.h  wsman-client.h  wsman-debug.h  wsman-declarations.h  wsman-dispatcher.h  wsman-epr.h  wsman-event-pool.h  wsman-event-source.h  wsman-faults.h  wsman-filter.h  wsman-key-value.h  wsman-names.h  wsman-plugins.h  wsman-server-api.h  wsman-server.h  wsman-soap-envelope.h  wsman-soap-message.h  wsman-soap.h  wsman-subscription-repository.h  wsman-types.h  wsman-xml-api.h  wsman-xml-binding.h  wsman-xml-serialize.h  wsman-xml-serializer.h  wsman-xml.h
include/cim/: CMakeLists.txt  cim-interface.h
include/u/: CMakeLists.txt  Makefile.am  base64.h  buf.h  carpal.h  debug.h  debug_internal.h  gettimeofday.h  hash.h  iniparser.h  libu.h  list.h  lock.h  log.h  logprv.h  md5.h  memory.h  misc.h  os.h  pthreadx.h  strings.h  uerr.h  uri.h  uuid.h
python/: AllClass.py  Makefile.am  OWsman.py  OpenWSMan.py  make.sh  omc.py  openwsman.c  openwsman.h  openwsman.i  openwsman_wrap.c  test.py
src/: CMakeLists.txt  Makefile.am
src/authenticators/: CMakeLists.txt  Makefile.am
src/client/: .cvsignore  Makefile.am  catch.c  enumeration.c  parse_uri.c  parse_uri.h  transfer.c  transport.c  utils.c  wsman-client-options.c  wsman-client-options.h  wsman.c  wsman.h
src/cpp/: CMakeLists.txt  Exception.cpp  Exception.h  Makefile.am  OpenWsmanClient.cpp  OpenWsmanClient.h  WsmanClient.cpp  WsmanClient.h  WsmanEPR.cpp  WsmanEPR.h  WsmanFilter.cpp  WsmanFilter.h  WsmanOptions.cpp  WsmanOptions.h
src/lib/: CMakeLists.txt  Makefile.am  sfcc-interface.c  sfcc-interface.h  sfcc-interface_utils.c  soap_api.h  ws-eventing.c  ws-eventing.h  ws-eventing_api.h  ws_dispatcher.c  ws_dispatcher.h  ws_errors.h  ws_soap_api.c  ws_transport.c  ws_transport.h  ws_utilities.c  ws_utilities.h  ws_xml_api.h  wsman-apache.c  wsman-apache.h  wsman-api.h  wsman-base64.c  wsman-base64.h  wsman-catalog.c  wsman-catalog.h  wsman-cimindication-processor.c  wsman-cimxmllistener-path.c  wsman-client-api.h  wsman-client-transport.c  wsman-client-transport.h  wsman-client.c  wsman-client.h  wsman-curl-client-transport.c  wsman-debug.c  wsman-debug.h  wsman-declarations.h  wsman-dispatcher.c  wsman-dispatcher.h  wsman-epr.c  wsman-epr.h  (+50 more)
src/lib/u/: base64.c  (+20 more)
src/libcim/: Makefile.am
src/libu/: Makefile.am  base64.c  buf.c  config.c  debug.c  dictionary.c  env.c  gen_uuid.c  gen_uuid_nt.c  gettimeofday.c  hash.c  iniparser.c  libu_conf.h  list.c  lock.c  locking.c  log.c  md5.c  misc.c  os.c  pthreadx_win32.c  str.c  strings.c  strlib.c  strsep.c  strtok_r.c  syslog.c  uerr.c  ulist.c  uoption.c  uri.c  url2.c  uuid.c  uuidP.h  uuid_time.c
src/plugins/: CMakeLists.txt  Makefile.am
src/server/: .cvsignore  CMakeLists.txt  Makefile.am  gss.c  shttpd.c  shttpd.h  test-plugins.c  wse-server-test.c  wsmand-auth.c  wsmand-auth.h  wsmand-daemon.c  wsmand-daemon.h  wsmand-libsoup-auth.c  wsmand-libsoup-listener.c  wsmand-libsoup-listener.h  wsmand-listener.c  wsmand-listener.h  wsmand-plugins.c  wsmand-shttpd-auth.c  wsmand-shttpd-auth.h  wsmand-shttpd-listener.c  wsmand.c
(+388 files in other folders)
